--- a/templates/pages/home.html
+++ b/templates/pages/home.html
@@ -40,7 +40,7 @@
             </div>
         </div>
     </div>
-    <div class='container p-5'>
+    {% comment %} <div class='container p-5'>
         <div class='row justify-content-center'>
             <div class='text-center'>
                 <h2 class='font-weigth-bold typed'>{% trans 'Assistez à un atelier sur' %} <span id='typed'></span></h2>
@@ -51,7 +51,7 @@
                 <a href="https://forms.gle/nQaLtF9Viu2eAvaN7" class='btn btn-dark btn-lg'>{% trans 'Posez votre candidature' %}</a>
             </div>
         </div>
-    </div>
+    </div> {% endcomment %}
     
 {% endblock %}
 
