--- a/templates/pages/home.html
+++ b/templates/pages/home.html
@@ -40,18 +40,19 @@
             </div>
         </div>
     </div>
-    {% comment %} <div class='container p-5'>
+    <div class='container p-5'>
         <div class='row justify-content-center'>
             <div class='text-center'>
-                <h2 class='font-weigth-bold typed'>{% trans 'Assistez à un atelier sur' %} <span id='typed'></span></h2>
-                <h4 class='text-muted'>
+                <h2 class='font-weigth-bold typed'>{% trans 'Assistez à un atelier sur' %} 
+                <span id='typed'></span></h2>
+                {% comment %} <h4 class='text-muted'>
                     {% trans "Le MakerLab de l'ESIH sous l'égide de HaitiBot lance un appel à candidatures pour renforcer et compléter le comité de gestion dudit laboratoire, afin de mieux structurer ce dernier et de continuer à poursuivre l'objectif et la vision du MakerLab qui est la création de (matériels, logiciels) informatiques,électroniques et l'innovation technologique." %}
                     <div class="text-body">{% trans 'Rejoinez-nous en cliquant sur ce bouton:' %}</div>
                 </h4>
-                <a href="https://forms.gle/nQaLtF9Viu2eAvaN7" class='btn btn-dark btn-lg'>{% trans 'Posez votre candidature' %}</a>
+                <a href="https://forms.gle/nQaLtF9Viu2eAvaN7" class='btn btn-dark btn-lg'>{% trans 'Posez votre candidature' %}</a> {% endcomment %}
             </div>
         </div>
-    </div> {% endcomment %}
+    </div>
     
 {% endblock %}
 
