work on team page

--- a/templates/pages/about.html
+++ b/templates/pages/about.html
@@ -50,9 +50,8 @@
         </div>
     </div>
 </div>
-{% comment %}
 <div class="container text-center mt-5 mb-2">
-    <h1 class="mb-0">Meet our agents</h1>
+    <h1 class="mb-0">Notre Equipes</h1>
     <span>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum</span>
 </div>
 <div class="container mt-3">
@@ -95,5 +94,4 @@
         </div>
     </div>
 </div>
-{% endcomment %}
 {% endblock content %}
