--- a/templates/pages/about.html
+++ b/templates/pages/about.html
@@ -72,20 +72,77 @@
             </div>
         </div>
         <div class="col-md-4">
-            <div class="bg-white p-3 text-center rounded box"><img class="img-responsive rounded-circle" src="https://i.imgur.com/oJmLthK.jpg" width="90">
-                <h5 class="mt-3 name">Nancy Markus</h5><span class="work d-block">Comapay agents house</span><span class="work d-block">real estate</span>
-                <div class="mt-4 about"><span>is a long established fact that eader&nbsp; will be distracted by the readable content.</span></div>
+            <div class="bg-white p-3 text-center rounded box">
+                <img class="img-responsive rounded-circle" src="{% static '/img/team/1.jpg' %}" width="90">
+                <h5 class="mt-3 name">Montissol Stevens</h5>
+                <span class="work d-block">Responsable en chef</span>
+                {% comment %} <span class="work d-block">real estate</span> {% endcomment %}
+                {% comment %} <div class="mt-4 about"><span>is a long established fact that eader&nbsp; will be distracted by the readable content.</span></div> {% endcomment %}
                 <div class="mt-4">
-                    <h6 class="v-profile">View Profile</h6>
+                    <h6 class="v-profile">
+                        (+509) 3209-2009/3406-6028</br>
+                        stevens.montissol.esih.edu
+                    </h6>
                 </div>
             </div>
         </div>
         <div class="col-md-4">
-            <div class="bg-white p-3 text-center rounded box"><img class="img-responsive rounded-circle" src="https://i.imgur.com/HFpxxJz.jpg" width="90">
-                <h5 class="mt-3 name">Martha Col</h5><span class="work d-block">Comapay agents house</span><span class="work d-block">real estate</span>
-                <div class="mt-4 about"><span>is a long established fact that eader&nbsp; will be distracted by the readable content.</span></div>
+            <div class="bg-white p-3 text-center rounded box">
+                <img class="img-responsive rounded-circle" src="{% static '/img/team/1.jpg' %}" width="90">
+                <h5 class="mt-3 name">Montissol Stevens</h5>
+                <span class="work d-block">Responsable en chef</span>
+                {% comment %} <span class="work d-block">real estate</span> {% endcomment %}
+                {% comment %} <div class="mt-4 about"><span>is a long established fact that eader&nbsp; will be distracted by the readable content.</span></div> {% endcomment %}
                 <div class="mt-4">
-                    <h6 class="v-profile">View Profile</h6>
+                    <h6 class="v-profile">
+                        (+509) 3209-2009/3406-6028</br>
+                        stevens.montissol.esih.edu
+                    </h6>
+                </div>
+            </div>
+        </div>
+        <div class="col-md-4">
+            <div class="bg-white p-3 text-center rounded box">
+                <img class="img-responsive rounded-circle" src="{% static '/img/team/1.jpg' %}" width="90">
+                <h5 class="mt-3 name">Montissol Stevens</h5>
+                <span class="work d-block">Responsable en chef</span>
+                {% comment %} <span class="work d-block">real estate</span> {% endcomment %}
+                {% comment %} <div class="mt-4 about"><span>is a long established fact that eader&nbsp; will be distracted by the readable content.</span></div> {% endcomment %}
+                <div class="mt-4">
+                    <h6 class="v-profile">
+                        (+509) 3209-2009/3406-6028</br>
+                        stevens.montissol.esih.edu
+                    </h6>
+                </div>
+            </div>
+        </div>
+        <div class="col-md-4">
+            <div class="bg-white p-3 text-center rounded box">
+                <img class="img-responsive rounded-circle" src="{% static '/img/team/1.jpg' %}" width="90">
+                <h5 class="mt-3 name">Montissol Stevens</h5>
+                <span class="work d-block">Responsable en chef</span>
+                {% comment %} <span class="work d-block">real estate</span> {% endcomment %}
+                {% comment %} <div class="mt-4 about"><span>is a long established fact that eader&nbsp; will be distracted by the readable content.</span></div> {% endcomment %}
+                <div class="mt-4">
+                    <h6 class="v-profile">
+                        (+509) 3209-2009/3406-6028</br>
+                        stevens.montissol.esih.edu
+                    </h6>
+                </div>
+            </div>
+        </div>
+        <div class="col-md-4">
+            <div class="bg-white p-3 text-center rounded box">
+                <img class="img-responsive rounded-circle" src="{% static '/img/team/1.jpg' %}" width="90">
+                <h5 class="mt-3 name">Montissol Stevens</h5>
+                <span class="work d-block">Responsable en chef</span>
+                {% comment %} <span class="work d-block">real estate</span> {% endcomment %}
+                {% comment %} <div class="mt-4 about"><span>is a long established fact that eader&nbsp; will be distracted by the readable content.</span></div> {% endcomment %}
+                <div class="mt-4">
+                    <h6 class="v-profile">
+                        (+509) 3209-2009/3406-6028</br>
+                        stevens.montissol.esih.edu
+                    </h6>
                 </div>
             </div>
         </div>
