--- a/templates/pages/about.html
+++ b/templates/pages/about.html
@@ -73,75 +73,75 @@
         </div>
         <div class="col-md-4">
             <div class="bg-white p-3 text-center rounded box">
-                <img class="img-responsive rounded-circle" src="{% static '/img/team/1.jpg' %}" width="90">
-                <h5 class="mt-3 name">Montissol Stevens</h5>
-                <span class="work d-block">Responsable en chef</span>
+                <img class="img-responsive rounded-circle" src="{% static '/img/team/2.jpg' %}" width="90">
+                <h5 class="mt-3 name">Louis Kermie</h5>
+                <span class="work d-block">Responsable Communication</span>
                 {% comment %} <span class="work d-block">real estate</span> {% endcomment %}
                 {% comment %} <div class="mt-4 about"><span>is a long established fact that eader&nbsp; will be distracted by the readable content.</span></div> {% endcomment %}
                 <div class="mt-4">
                     <h6 class="v-profile">
-                        (+509) 3209-2009/3406-6028</br>
-                        stevens.montissol.esih.edu
+                        (+509) 4656-5017</br>
+                        kermiel2002@gmail.com
                     </h6>
                 </div>
             </div>
         </div>
         <div class="col-md-4">
             <div class="bg-white p-3 text-center rounded box">
-                <img class="img-responsive rounded-circle" src="{% static '/img/team/1.jpg' %}" width="90">
-                <h5 class="mt-3 name">Montissol Stevens</h5>
-                <span class="work d-block">Responsable en chef</span>
+                <img class="img-responsive rounded-circle" src="{% static '/img/team/6.jpg' %}" width="90">
+                <h5 class="mt-3 name">Meritus Freedy</h5>
+                <span class="work d-block">Responsable Ressources humaines</span>
                 {% comment %} <span class="work d-block">real estate</span> {% endcomment %}
                 {% comment %} <div class="mt-4 about"><span>is a long established fact that eader&nbsp; will be distracted by the readable content.</span></div> {% endcomment %}
                 <div class="mt-4">
                     <h6 class="v-profile">
-                        (+509) 3209-2009/3406-6028</br>
-                        stevens.montissol.esih.edu
+                        (+509) 4802-0151</br>
+                        meritusfreedy@gmail.com
                     </h6>
                 </div>
             </div>
         </div>
         <div class="col-md-4">
             <div class="bg-white p-3 text-center rounded box">
-                <img class="img-responsive rounded-circle" src="{% static '/img/team/1.jpg' %}" width="90">
-                <h5 class="mt-3 name">Montissol Stevens</h5>
-                <span class="work d-block">Responsable en chef</span>
+                <img class="img-responsive rounded-circle" src="{% static '/img/team/3.jpg' %}" width="90">
+                <h5 class="mt-3 name">Lajeanty Louis Midson</h5>
+                <span class="work d-block">Responsable Technique</span>
                 {% comment %} <span class="work d-block">real estate</span> {% endcomment %}
                 {% comment %} <div class="mt-4 about"><span>is a long established fact that eader&nbsp; will be distracted by the readable content.</span></div> {% endcomment %}
                 <div class="mt-4">
                     <h6 class="v-profile">
-                        (+509) 3209-2009/3406-6028</br>
-                        stevens.montissol.esih.edu
+                        (+509) 4695-4516</br>
+                        louismidsonlajeanty@gmail.com
                     </h6>
                 </div>
             </div>
         </div>
         <div class="col-md-4">
             <div class="bg-white p-3 text-center rounded box">
-                <img class="img-responsive rounded-circle" src="{% static '/img/team/1.jpg' %}" width="90">
-                <h5 class="mt-3 name">Montissol Stevens</h5>
-                <span class="work d-block">Responsable en chef</span>
+                <img class="img-responsive rounded-circle" src="{% static '/img/team/4.jpg' %}" width="90">
+                <h5 class="mt-3 name">Sannon Jean Duckens</h5>
+                <span class="work d-block">Responsable Logistique</span>
                 {% comment %} <span class="work d-block">real estate</span> {% endcomment %}
                 {% comment %} <div class="mt-4 about"><span>is a long established fact that eader&nbsp; will be distracted by the readable content.</span></div> {% endcomment %}
                 <div class="mt-4">
                     <h6 class="v-profile">
-                        (+509) 3209-2009/3406-6028</br>
-                        stevens.montissol.esih.edu
+                        (+509) 3639-1656</br>
+                        sannonjeanduckens@gmail.com
                     </h6>
                 </div>
             </div>
         </div>
         <div class="col-md-4">
             <div class="bg-white p-3 text-center rounded box">
-                <img class="img-responsive rounded-circle" src="{% static '/img/team/1.jpg' %}" width="90">
-                <h5 class="mt-3 name">Montissol Stevens</h5>
-                <span class="work d-block">Responsable en chef</span>
+                <img class="img-responsive rounded-circle" src="{% static '/img/team/5.jpg' %}" width="90">
+                <h5 class="mt-3 name">Estinvil Clivinse</h5>
+                <span class="work d-block">Responsable Marketing</span>
                 {% comment %} <span class="work d-block">real estate</span> {% endcomment %}
                 {% comment %} <div class="mt-4 about"><span>is a long established fact that eader&nbsp; will be distracted by the readable content.</span></div> {% endcomment %}
                 <div class="mt-4">
                     <h6 class="v-profile">
-                        (+509) 3209-2009/3406-6028</br>
-                        stevens.montissol.esih.edu
+                        (+509) 3165-8867</br>
+                        estinvilclivince1998@gmail.com
                     </h6>
                 </div>
             </div>
