--- a/templates/pages/about.html
+++ b/templates/pages/about.html
@@ -50,9 +50,9 @@
         </div>
     </div>
 </div>
-<div class="container text-center mt-5 mb-2">
+<div id="team" class="container text-center mt-5 mb-2">
     <h1 class="mb-0">Notre Equipes</h1>
-    <span>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum</span>
+    {% comment %} <span>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum</span> {% endcomment %}
 </div>
 <div class="container mt-3">
     <div class="row">
