--- a/templates/partials/_header.html
+++ b/templates/partials/_header.html
@@ -22,10 +22,10 @@
                     </li>
 
                     <li class="nav-item {% if request.get_full_path == '/team/' %}active{% endif %}">
-                        <a class="nav-link" href="{% url 'about' %}">{% trans 'Equipe' %}</a>
+                        <a class="nav-link" href="{% url 'about' %}#team">{% trans 'Equipe' %}</a>
                     </li>
                     <li class="nav-item {% if request.get_full_path == '/partners/' %}active{% endif %}">
-                        <a class="nav-link" href="{% url 'about' %}">{% trans 'Partenaires' %}</a>
+                        <a class="nav-link" href="{% url 'about' %}#partner">{% trans 'Partenaires' %}</a>
                     </li>
                     <li class="nav-item {% if request.get_full_path == '/contact/' %}active{% endif %}">
                         <a class="nav-link" href="{% url 'about' %}">{% trans 'Contactez-nous' %}</a>
