--- a/templates/pages/about.html
+++ b/templates/pages/about.html
@@ -152,26 +152,22 @@
     <h1 class="mb-0">Nos Partenaires</h1>
     {% comment %} <span>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum</span> {% endcomment %}
 </div>
-<div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
-    <div class="carousel-indicators">
-      <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
-      <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
-    </div>
+<div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
     <div class="carousel-inner">
-      <div class="carousel-item active">
-        <img src="{% static '/img/partner/1.png' %}" class="d-block w-100" alt="...">
-      </div>
-      <div class="carousel-item">
-        <img src="{% static '/img/partner/2.jpg' %}" class="d-block w-100" alt="...">
-      </div>
+        <div class="carousel-item active">
+            <img src="{% static '/img/partner/1.png' %}" class="d-block w-100" alt="...">
+          </div>
+          <div class="carousel-item">
+            <img src="{% static '/img/partner/2.jpg' %}" class="d-block w-100" alt="...">
+        </div>
     </div>
-    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
+   <button class="carousel-control-prev" type="button" data-target="#carouselExampleControls" data-slide="prev">
       <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-      <span class="visually-hidden">Previous</span>
+      <span class="sr-only">Previous</span>
     </button>
-    <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
+    <button class="carousel-control-next" type="button" data-target="#carouselExampleControls" data-slide="next">
       <span class="carousel-control-next-icon" aria-hidden="true"></span>
-      <span class="visually-hidden">Next</span>
+      <span class="sr-only">Next</span>
     </button>
-  </div>
+</div>
 {% endblock content %}
