--- a/templates/pages/about.html
+++ b/templates/pages/about.html
@@ -152,22 +152,18 @@
     <h1 class="mb-0">Nos Partenaires</h1>
     {% comment %} <span>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum</span> {% endcomment %}
 </div>
-<div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
-    <div class="carousel-inner">
-        <div class="carousel-item active">
-            <img src="{% static '/img/partner/1.png' %}" class="d-block w-100" alt="...">
-          </div>
-          <div class="carousel-item">
-            <img src="{% static '/img/partner/2.jpg' %}" class="d-block w-100" alt="...">
+<div class="card-group">
+    <div class="card" style="height: 10rem;">
+        <img src="{% static '/img/partner/1.png' %}" class="card-img-top" alt="...">
+        <div class="card-body">
+          {% comment %} <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p> {% endcomment %}
         </div>
     </div>
-   <button class="carousel-control-prev" type="button" data-target="#carouselExampleControls" data-slide="prev">
-      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-      <span class="sr-only">Previous</span>
-    </button>
-    <button class="carousel-control-next" type="button" data-target="#carouselExampleControls" data-slide="next">
-      <span class="carousel-control-next-icon" aria-hidden="true"></span>
-      <span class="sr-only">Next</span>
-    </button>
+    <div class="card" style="height: 18rem;">
+        <img src="{% static '/img/partner/2.jpg' %}" class="card-img-top" alt="...">
+        <div class="card-body">
+          {% comment %} <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p> {% endcomment %}
+        </div>
+    </div>
 </div>
 {% endblock content %}
