--- a/templates/pages/about.html
+++ b/templates/pages/about.html
@@ -153,13 +153,13 @@
     {% comment %} <span>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum</span> {% endcomment %}
 </div>
 <div class="card-group">
-    <div class="card" style="height: 10rem;">
+    <div class="card" class="col-12 col-md-6">
         <img src="{% static '/img/partner/1.png' %}" class="card-img-top" alt="...">
         <div class="card-body">
           {% comment %} <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p> {% endcomment %}
         </div>
     </div>
-    <div class="card" style="height: 18rem;">
+    <div class="card" class="col-12 col-md-6">
         <img src="{% static '/img/partner/2.jpg' %}" class="card-img-top" alt="...">
         <div class="card-body">
           {% comment %} <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p> {% endcomment %}
