--- a/templates/courses/home.html
+++ b/templates/courses/home.html
@@ -12,7 +12,7 @@
 {% endblock %}
 
 {% block content %}
-    {% include 'partials/_subheader.html' with subheader_title='nos cours' %}
+    {% include 'partials/_subheader.html' with subheader_title='Nos cours' %}
     <div class="container">
         <div class="row justify-content-center mt-2 m-0">
             <div class="col-12 text-white">
