--- a/templates/partials/_course_card.html
+++ b/templates/partials/_course_card.html
@@ -2,22 +2,22 @@
 {% load i18n %}
 
 <div class='col-md-4 col-12 pt-2'>               
-    <div class="card shadow pb-2">
+    <div class="card shadow-sm pb-2">
         <img src="{% if course.photo %}/media/{{course.photo}}{% else %}{% static 'img/placeholder.svg' %}{% endif %}" class="card-img-top" alt="...">
         <div class="card-body">
             <span class="text-muted">COURS</span>
             <h3 class="card-title">{{course.title}}</h3>
-            <p class="card-text">{{course.description|truncatewords:20|date:'D, d N H:i:s e'}}</p>
+            <p class="card-text">{{course.description|truncatewords:20}}</p>
             <div class="font-weight-bold">
                 {% language 'fr' %}
-                    {{course.get_next_course_date.start_date|date:'D, d N '}}
+                    Débute le {{course.get_next_course_date.start_date|date:'D, d N Y'}}
                 {% endlanguage %}
                 
             </div>
             <div class="text-muted mb-3 mt-2">{{course.get_next_course_date.remainPlaces}} {% trans 'places restantes' %}</div>
             <div class="d-flex flex-row justify-content-between">
-                <a href="{% url 'course_detail' course.id %}" class="btn btn-outline-secondary">s'informer</a>
-                <a href="{% url 'enroll' course.get_next_course_date.id %}" class="btn btn-secondary">s'inscrire</a>
+                <a href="{% url 'course_detail' course.id %}" class="btn btn-outline-secondary shadow-sm">s'informer</a>
+                <a href="{% url 'enroll' course.get_next_course_date.id %}" class="btn btn-primary shadow-sm">s'inscrire</a>
             </div>
         </div>
         {% if course.tags %}
