--- a/templates/courses/payement.html
+++ b/templates/courses/payement.html
@@ -12,37 +12,41 @@
 {% endblock %}
 
 {% block content %}
-    <div class='container mt-3'>
+    <div class='container-fluid mt-3'>
         {% if success %}
-            <div class='row'>
-                <ul class="list-unstyled multi-steps list-group">
-                    <li class="list-group-item">{% trans 'Selectionnez un cours' %}</li>
-                    <li class="list-group-item"> <a class="" href="{% url 'resume_get' courseDate.teacher.pk %}"><strong>{% trans "Professeur: " %}</strong>{{courseDate.teacher.get_full_name}}</a></li>
-                    <li class="list-group-item">{% trans 'Inscription confirmée' %}</li>
-                    <li class="list-group-item is-active">{% trans 'paiement avec succès' %}</li>
-                </ul>
-            </div>
             <div class='row justify-content-center'>
-                <div class='card'>
-                    <div class='card-body'>
-                        <h3 class='card-title'>{{courseDate.course.title}}</h3>
-                        <ul class="list-group">
-                            <li class="list-group-item">{{courseDate.date}}</li>
-                            <li class="list-group-item">{% trans 'Professeur'%} {{courseDate.teacher.get_full_name}}</li>
-                            <li class="list-group-item">{{courseDate.price}} {{courseDate.currency}}{% trans "Frais d'inscription" %}</li>
-                        </ul>
+                <div class="col-12">
+                    <ul class="list-unstyled multi-steps mt-4">
+                        <li>{% trans 'Selection de la formation' %}</li>
+                        <li>{% trans 'Paiement réussi' %}</li>
+                        <li class="is_active">{% trans 'Confirmation' %}</li>
+                    </ul>
+                </div>   
+                <div class='col-md-4 col-sm-12'>
+                    <div class='card mt-2 mb-5'>
+                        <div class='card-body'>
+                            <h4 class='card-title'>Paiement réussi !</h4>
+                            <p>Participation confirmée pour le {% language 'fr' %}
+                            {{courseDate.start_date|date:'D, d N Y'}} à Ecole Supérieure Infotronique
+                            {% endlanguage %}  à notre formation {{courseDate.course.title}}</p>
+                            <p>N'oubliez pas: 
+                                {{courseDate.course.note}}
+                            </p>
+                        </div>
                     </div>
                 </div>
             </div>
         {% else %}
-            <div class='row justify-content-center'>
-                <div class='card m-4'>
-                    <div class='card-body'>
-                        <h3 class='card-title'>{% trans "Echec paiement" %}</h3>
-                        {% include 'partials/_alerts.html' with messages=messages no_fade=True %}
-                        <a class='btn btn-primary col-md-6 m-auto btn-block' href="{% url 'enroll' courseDate.id %}">{% trans "Retour" %}</a>
+            <div class='row justify-content-center text-center'>
+                <div class="col-6">
+                    <div class='card mt-3 mb-5'>
+                        <div class='card-body'>
+                            <h3 class='card-title mt-2'>{% trans "Echec de paiement Moncash" %}</h3>
+                            {% include 'partials/_alerts.html' with messages=messages no_fade=True %}
+                            <a class='btn btn-primary col-md-4 m-auto mb-5' href="{% url 'courses_home' %}">{% trans "Retour" %}</a>
+                        </div>
                     </div>
-                </div>
+                </div>     
             </div>
         {% endif %}
     </div>
